--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Verify Files
+      - name: Debug Repository Structure
         run: ls -R
 
       - name: Set Up JDK 17
@@ -27,4 +27,4 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn -f javaproject/pom.xml clean install -DskipTests
+        run: mvn -f pom.xml clean install
