--- a/pom.xml
+++ b/pom.xml
@@ -1,2 +1,11 @@
-      - name: Build with Maven
-        run: mvn -f javaproject/pom.xml clean install
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+         http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  
+  <groupId>com.example</groupId>
+  <artifactId>javaproject</artifactId>
+  <version>1.0-SNAPSHOT</version>
+</project>
